crates/ty_server/tests/e2e/snapshots/e2e__provide_type__provide_class_local_to_function_type.snap
---
source: crates/ty_server/tests/e2e/provide_type.rs
assertion_line: 24
expression: "&provide_type_response"
---
{
  "types": [
    "foo.a.A"
  ]
}
